--- a/ppdo-ar/nginx.conf
+++ b/ppdo-ar/nginx.conf
@@ -1,3 +1,10 @@
+# Add this 'map' block at the top of your nginx.conf, inside the 'http' block
+# but outside any 'server' blocks. It correctly handles the Connection header.
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -13,5 +20,31 @@ server {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # ✅ REPLACE your old '/ws' location block with this one.
+    # This location block handles all SockJS requests, including fallbacks.
+    location /ws {
+        # Pass requests to the backend Spring Boot application
+        proxy_pass http://backend:8080/ws;
+
+        # ------------ WebSocket Headers ------------
+        # These are required to handle the WebSocket upgrade handshake
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+
+        # ------------ General Proxy Headers ------------
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # ------------ Timeouts for Long-Polling ------------
+        # Prevents Nginx from closing long-running connections prematurely
+        proxy_read_timeout 86400s; # 24 hours
+        proxy_send_timeout 86400s; # 24 hours
     }
 }
