Backend: hosting update

--- a/ppdo-ar/nginx.conf
+++ b/ppdo-ar/nginx.conf
@@ -12,39 +12,32 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /api {
-        proxy_pass http://backend:8080;
-        proxy_set_header Host $host;
+    # This block routes all API requests to the backend
+    location /api/ {
+        # ✅ FIX: Use a matching trailing slash to correctly pass the path
+        proxy_pass http://backend:8080/api/;
+        # ✅ FIX: Set the Host header explicitly for CORS to w
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # ✅ REPLACE your old '/ws' location block with this one.
-    # This location block handles all SockJS requests, including fallbacks.
-    location /ws {
-        # Pass requests to the backend Spring Boot application
-        proxy_pass http://backend:8080/ws;
-
-        # ------------ WebSocket Headers ------------
-        # These are required to handle the WebSocket upgrade handshake
+    # This block handles WebSocket traffic
+    location /ws/ {
+        # ✅ FIX: Use a matching trailing slash to correctly pass the path
+        proxy_pass http://backend:8080/ws/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
+        # ✅ FIX: Set the Host header explicitly for CORS
+        proxy_set_header Host $http_host;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
+    }
 
-        # ------------ General Proxy Headers ------------
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # ------------ Timeouts for Long-Polling ------------
-        # Prevents Nginx from closing long-running connections prematurely
-        proxy_read_timeout 86400s; # 24 hours
-        proxy_send_timeout 86400s; # 24 hours
+    # This block serves the Angular frontend
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
