--- a/ppdoarbackend/src/main/resources/application.properties
+++ b/ppdoarbackend/src/main/resources/application.properties
@@ -1,47 +1,52 @@
+# # MariaDB database connection settings
+# spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://mariadb:3306/ppdo_ar_db}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# # JPA settings
+# spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+# spring.jpa.show-sql=true
+
+# spring.servlet.multipart.max-file-size=5MB
+# spring.servlet.multipart.max-request-size=5MB
+
+# # MariaDB dialect
+# spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+# # JWT Secret Key
+# jwt.secret=${JWT_SECRET}
+
+# # Directory for storing uploaded files
+# upload.dir=${UPLOAD_DIR:project-images/}
+
+# server.address=0.0.0.0
+# server.port=8080
+
+
 # MariaDB database connection settings
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mariadb://mariadb:3306/ppdo_ar_db}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.url=jdbc:mariadb://localhost:3306/ppdo_ar_db
+spring.datasource.username=root
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA settings
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
-# MariaDB dialect
+# Add this line to specify the MariaDB dialect
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 # JWT Secret Key
-jwt.secret=${JWT_SECRET}
+jwt.secret=a4IaFKF5NKCmCk5Ehe9uwoPrHDnnwT8GCYyX+xqtLgI=
 
 # Directory for storing uploaded files
-upload.dir=${UPLOAD_DIR:project-images/}
-
-server.address=0.0.0.0
-server.port=8080
+upload.dir=project-images/
 
 
-## MariaDB database connection settings
-#spring.datasource.url=jdbc:mariadb://localhost:3306/ppdo_ar_db
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#
-## JPA settings
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#
-#spring.servlet.multipart.max-file-size=5MB
-#spring.servlet.multipart.max-request-size=5MB
-#
-## Add this line to specify the MariaDB dialect
-#spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-#
-## JWT Secret Key
-#jwt.secret=a4IaFKF5NKCmCk5Ehe9uwoPrHDnnwT8GCYyX+xqtLgI=
-#
-## Directory for storing uploaded files
-#upload.dir=project-images/
+# Ollama Configuration
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.model=deepseek-r1:1.5b
