--- a/ppdoarbackend/src/main/resources/application.properties
+++ b/ppdoarbackend/src/main/resources/application.properties
@@ -23,6 +23,8 @@ upload.dir=${UPLOAD_DIR:project-images/}
 server.address=0.0.0.0
 server.port=8080
 
+spring.ai.ollama.base-url=http://ollama:11434
+spring.ai.ollama.model=deepseek-r1:1.5b
 
 # # MariaDB database connection settings
 # spring.datasource.url=jdbc:mariadb://localhost:3306/ppdo_ar_db
