update deepseek-r1:1.5b to tinyllama

--- a/ppdoarbackend/src/main/resources/application.properties
+++ b/ppdoarbackend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ server.address=0.0.0.0
 server.port=8080
 
 spring.ai.ollama.base-url=http://ollama:11434
-spring.ai.ollama.model=deepseek-r1:1.5b
+spring.ai.ollama.model=tinyllama
 
 # # MariaDB database connection settings
 # spring.datasource.url=jdbc:mariadb://localhost:3306/ppdo_ar_db
@@ -48,7 +48,3 @@ spring.ai.ollama.model=deepseek-r1:1.5b
 # # Directory for storing uploaded files
 # upload.dir=project-images/
 
-
-# Ollama Configuration
-spring.ai.ollama.base-url=http://localhost:11434
-spring.ai.ollama.model=deepseek-r1:1.5b
