combine front-end to backend execute

--- a/ppdo-ar/angular.json
+++ b/ppdo-ar/angular.json
@@ -13,23 +13,24 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/ppdo-ar",
+            "outputPath": "../ppdoarbackend/src/main/resources/static",
+            "baseHref": "/",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/app/assets"
+              {
+                "glob": "**/*",
+                "input": "src/app/assets",
+                "output": "/assets/"
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [
-              "src/polyfills.ts"
-            ]
+            "styles": ["src/styles.css"],
+            "scripts": ["src/polyfills.ts"]
           },
           "configurations": {
             "production": {
@@ -76,17 +77,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/app/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/app/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
