--- a/ppdoarbackend/src/main/resources/application.properties
+++ b/ppdoarbackend/src/main/resources/application.properties
@@ -21,15 +21,16 @@
 # upload.dir=${UPLOAD_DIR:project-images/}
 
 # server.address=0.0.0.0
-# server.port=8080
 
-spring.ai.ollama.base-url=http://ollama:11434
+server.port=8081
+
+spring.ai.ollama.base-url=http://127.0.0.1:11434
 spring.ai.ollama.model=tinyllama
 
 # MariaDB database connection settings
-spring.datasource.url=jdbc:mariadb://localhost:3306/ppdo_ar_db
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/ppdo_ar_db
+spring.datasource.username=icto
+spring.datasource.password=icto@PGLDS123
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # JPA settings
@@ -55,3 +56,4 @@ spring.web.resources.add-mappings=true
 
 # Error page handling
 server.error.whitelabel.enabled=false
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
